# Cryo-analysis

./: App.cpp  App.h  Average.cpp  Average.h  CMakeLists.txt  main.cpp
